# tipy

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: cfg.py  parse.py  typeanalysis.py
src/tipy/: ast.py  cfg.py  log.py  parser.py  prettyprinter.py  symbol.py  tip.lark  type.py  util.py  visitor.py
src/tipy/analysis/: __init__.py  analysis.py  typeanalysis.py
src/tipy/lattice/: lattice.py
src/tipy/solver/: __init__.py  solver.py  unionfind.py
tests/: test_cfg.py  test_parser.py  test_symbol.py  test_type.py  test_util.py  util.py
tip_examples/: field_write.tip  string_op.tip
