[project]
name = "tipy"
version = "0.0.1"
description = "Tip Python Implementation"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
keywords = ["programming language", "tip", "python"]

authors = [
  {name = "Qi Zhan", email = "qizhan@zju.edu.cn" }
]
maintainers = [
  {name = "Qi Zhan", email = "qizhan@zju.edu.cn" }
]

dependencies = [
]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage"]

[project.urls]
"Homepage" = "https://github.com/Qi-Zhan/WatchYourself"
"Bug Reports" = "https://github.com/Qi-Zhan/WatchYourself/issues"
"Source" = "https://github.com/Qi-Zhan/WatchYourself"


[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
